2010-06-10  Sebastien Pouliot  <sebastien@ximian.com>

	* ConstructorShouldNotCallVirtualMethodsRule.cs: Avoid calling
	MethodReference.ToString since we already have the value

2010-06-05  Sebastien Pouliot  <sebastien@ximian.com>

	* ReturnNullRule.cs: Fix case where an immediate if (?:) would 
	not be reported

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferEmptyInstanceOverNullRule.cs: Keep state around since it
	can be needed if we report a defect. Rename GetReturnTypeSuggestion
	to SuggestReturnType (apply ConsiderConvertingMethodToPropertyRule)

2010-01-28  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferTryParseRule.cs: Simplify and reduce code duplication by
	using the new MethodSignatures.[Try]Parse

2010-01-23  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferSafeHandleRule.cs: Apply MethodCanBeMadeStaticRule
	* PreferTryParseRule.cs: New. Rule to encourage the use of TryParse
	methods (when available) over Parse methods.

2010-01-09  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferParamsArrayForVariableArgumentsRule.cs: New rule to warn
	about methods using the vararg calling convention and not used 
	for interoperability purpose.

2009-07-17  Jesse Jones  <jesjones@mindspring.com>

	* GetEntryAssemblyMayReturnNullRule.cs, DisableDebuggingCodeRule.cs: 
	Rewrote descriptions.

2009-07-01  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-02-17  Jesse Jones  <jesjones@mindspring.com>

	* OnlyUseDisposeForIDisposableTypesRule.cs, Makefile.am: 
	Added new rule.

2009-01-30  Jb Evain  <jbevain@novell.com>

	* Makefile.am: add new DoNotUseEnumIsAssignableFrom rule and tests.

2009-01-30  Jb Evain  <jbevain@novell.com>

	* DoNotUseEnumIsAssignableFromRule.cs: add new rule.

2009-01-20  Jesse Jones  <jesjones@mindspring.com>

	* PreferSafeHandleRule.cs: Added.

2008-12-23  Cedric Vivier  <cedricv@neonux.com>

	* CloneMethodShouldNotReturnNull.cs:
	* ToStringReturnsNullRule.cs: