@@ -1,3 +1,8 @@
+2010-06-13  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DisableDebuggingCodeRule.cs: 
+		Apply AvoidRepetitiveCallsToPropertiesRule
+
 2010-06-10  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ConstructorShouldNotCallVirtualMethodsRule.cs: Avoid calling
